[package]
name = "ddctui"
version = "0.1.0"
edition = "2024"
description = "A TUI for controlling monitor settings via DDC/CI (ddcutil)"
license = "MIT"
repository = "https://github.com/UMCEKO/ddctui"
keywords = ["ddc", "monitor", "tui", "ddcutil", "brightness"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
